archive/apps/miniflux/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
        app.kubernetes.io/name: miniflux
    spec:
      containers:
        - name: miniflux
          image: "ghcr.io/miniflux/miniflux:2.3.3"
          command: ["miniflux", "-c", "/etc/miniflux/miniflux.conf"]
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
          volumeMounts:
            - mountPath: /etc/miniflux
              name: miniflux-conf
      volumes:
        - name: miniflux-conf
          configMap:
            name: miniflux-conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
        app.kubernetes.io/name: db
    spec:
      containers:
        - name: db
          image: "public.ecr.aws/docker/library/postgres:18.4-alpine"
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - miniflux
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - miniflux
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: miniflux-db-data
      volumes:
        - name: miniflux-db-data
          persistentVolumeClaim:
            claimName: miniflux-db-data
